--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,4 @@ gereksiz:
 markdown : redcarpet
 markdown_ext : markdown,md,mdk
 redcarpet:
-    extensions : ['fenced_code_blocks']
+    extensions : ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
