--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title:       随手一笔
 email:       fansekey@gmail.com
-author:      Xiang Shouding
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+author:      oxUnd
+description: "某人的日常牢骚，写一些有的没的"
 baseurl:     ""
 url:         "https://www.orrafy.com"
 date_format: "%b %-d, %Y"
@@ -23,11 +23,10 @@ ajaxify_contact_form: false
 disqus_shortname: feeddly
 
 # Social icons
-github_username: xiangshouding
+github_username: oxUnd
 bitbucket_username:
 stackoverflow_id:
 twitter_username: 
-# google_plus_id: xiangshouding
 linkedin_username:
 angellist_username:
 medium_id:
