--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -20,7 +20,7 @@ jobs:
         args: ./build.sh
     - name: deploy
       uses: peaceiris/actions-gh-pages@v4
-      if: github.ref == 'refs/heads/master')
+      if: github.ref == 'refs/heads/master'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./public
